tests/route53/ctrl-r53-00/ac01-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ac01-r53-global-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: ac01-r53-app-ns
  annotations:
    aws.kropath.run/global-config-namespace: ac01-r53-global-ns
    services.k8s.aws/owner-account-id: "123456789012"
    services.k8s.aws/default-region: "us-east-1"
---
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# AC-1: globalKropathConfig.mandatory.route53.defaultTTL=300 (level 1)
# flows to effCfg.mandatory.defaultTTL=300.
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: ac01-r53-global-ns
spec:
  mandatory:
    route53:
      defaultTTL: 300
  aws:
    accountId: "123456789012"
    region: "us-east-1"
---
apiVersion: aws.kropath.run/v1alpha1
kind: Route53Config
metadata:
  name: ac1-r53-policy
  namespace: ac01-r53-app-ns
spec: {}
