tests/route53/ctrl-r53-00/ac03-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ac03-r53-global-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: ac03-r53-app-ns
  annotations:
    aws.kropath.run/global-config-namespace: ac03-r53-global-ns
---
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# AC-3: globalRoute53Config.mandatory.healthCheckFailureThreshold=3 (level 3)
# flows to effCfg.mandatory.healthCheckFailureThreshold=3 when levels 1,2 absent.
apiVersion: aws.kropath.run/v1alpha1
kind: KropathConfig
metadata:
  name: baseline
  namespace: ac03-r53-global-ns
spec:
  aws:
    accountId: "123456789012"
    region: "us-east-1"
---
apiVersion: aws.kropath.run/v1alpha1
kind: Route53Config
metadata:
  name: ac3-r53-policy
  namespace: ac03-r53-global-ns
spec:
  mandatory:
    healthCheckFailureThreshold: 3
---
apiVersion: aws.kropath.run/v1alpha1
kind: Route53Config
metadata:
  name: ac3-r53-policy
  namespace: ac03-r53-app-ns
spec: {}
