tests/route53/ctrl-r53-00/ac05-setup.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# AC-5: localRoute53Config.defaults.defaultTTL=60 (level 6)
# flows to effCfg.defaults.defaultTTL=60 when no mandatory set.
apiVersion: aws.kropath.run/v1alpha1
kind: Route53Config
metadata:
  name: ac5-r53-policy
  namespace: route53-prod
spec:
  defaults:
    defaultTTL: 60
