tests/route53/ctrl-r53-00/ac09-setup.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# AC-9: Route53Config with defaultTTL set in BOTH mandatory and defaults
# should be rejected by the Route53Config CRD's CEL mutual-exclusion rule.
apiVersion: aws.kropath.run/v1alpha1
kind: Route53Config
metadata:
  name: ac9-invalid-dual-tier-ttl
  namespace: route53-prod
spec:
  mandatory:
    defaultTTL: 300
  defaults:
    defaultTTL: 60
