tests/route53/ctrl-r53-00/ac07-assert.yaml
# Copyright 2026 kropath Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Assert AC-7: effCfg.mandatory.tags is union-merged; globalKropathConfig wins on "env" key.
apiVersion: aws.kropath.run/v1alpha1
kind: Route53Config
metadata:
  name: ac7-r53-policy
  namespace: ac07-r53-app-ns
status:
  effectiveConfig:
    mandatory:
      tags:
        env: prod
        org: kropath
        team: platform
